force-app/main/default/objects/Lead/fields/ccde_Oportunidades__c.field-meta.xml
<CustomField>
    <fullName>ccde_Oportunidades__c</fullName>
    <label>Número de Oportunidades</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>