force-app/main/default/objects/Lead/fields/Data_de_envio_de_documento_de_identifica__c.field-meta.xml
<CustomField>
    <fullName>Data_de_envio_de_documento_de_identifica__c</fullName>
    <label>Data de envio de documento de identifica</label>
    <type>Date</type>
</CustomField>