force-app/main/default/objects/Lead/fields/DisqualifiedLead__c.field-meta.xml
<CustomField>
    <fullName>DisqualifiedLead__c</fullName>
    <label>Motivo Desqualificação</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Baixa Tensão</fullName>
            </value>
            <value>
                <fullName>Cliente Delta</fullName>
            </value>
            <value>
                <fullName>Falta de Interesse</fullName>
            </value>
            <value>
                <fullName>Inviável</fullName>
            </value>
            <value>
                <fullName>Não Respondeu</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Recuperação Judicial</fullName>
            </value>
            <value>
                <fullName>Regulatorio</fullName>
            </value>
            <value>
                <fullName>(1) - Fora do ICP</fullName>
            </value>
            <value>
                <fullName>(2) - Baixa Tensão</fullName>
            </value>
            <value>
                <fullName>(3) - Contato Futuro</fullName>
            </value>
            <value>
                <fullName>(4) - Dados inválidos</fullName>
            </value>
            <value>
                <fullName>(5) - Interesse em parceria</fullName>
            </value>
            <value>
                <fullName>(6) - Já está no ACL</fullName>
            </value>
            <value>
                <fullName>(7) - Lead duplicado (Redundância Positiva)</fullName>
            </value>
            <value>
                <fullName>(8) - Score - Reprovado por crédito</fullName>
            </value>
            <value>
                <fullName>(9) - Sem interesse</fullName>
            </value>
            <value>
                <fullName>(10) - Sem resposta (após 9 FUP&apos;s)</fullName>
            </value>
            <value>
                <fullName>(11) - Dados insuficientes para enviar para estudo</fullName>
            </value>
            <value>
                <fullName>(12) Concorrência</fullName>
                <label>(12) - Concorrência</label>
            </value>
            <value>
                <fullName>Recusa Reclame Aqui</fullName>
            </value>
            <value>
                <fullName>Baixa Demanda</fullName>
            </value>
            <value>
                <fullName>Consumo abaixo do range</fullName>
            </value>
            <value>
                <fullName>Crédito reprovado</fullName>
            </value>
            <value>
                <fullName>Dados inválidos</fullName>
            </value>
            <value>
                <fullName>Distribuidora não atendida</fullName>
            </value>
            <value>
                <fullName>Enviado para Grandes Clientes</fullName>
            </value>
            <value>
                <fullName>Multa da Distribuidora</fullName>
            </value>
            <value>
                <fullName>Não é o titular da conta</fullName>
            </value>
            <value>
                <fullName>Parceria/Quer vender produto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>