force-app/main/default/objects/Lead/fields/Documento_de_identifica_o_validado__c.field-meta.xml
<CustomField>
    <fullName>Documento_de_identifica_o_validado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documento de identificação validado</label>
    <type>Checkbox</type>
</CustomField>