force-app/main/default/objects/Lead/fields/Envio_de_documento_de_identifica_o__c.field-meta.xml
<CustomField>
    <fullName>Envio_de_documento_de_identifica_o__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envio de documento de identificação</label>
    <type>Checkbox</type>
</CustomField>