force-app/main/default/objects/Lead/fields/Envio_do_contrato_social__c.field-meta.xml
<CustomField>
    <fullName>Envio_do_contrato_social__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envio do contrato social</label>
    <type>Checkbox</type>
</CustomField>