force-app/main/default/objects/Lead/fields/Etapa__c.field-meta.xml
<CustomField>
    <fullName>Etapa__c</fullName>
    <label>Etapa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>