force-app/main/default/objects/Lead/fields/Etapa_Full_Self_Service__c.field-meta.xml
<CustomField>
    <fullName>Etapa_Full_Self_Service__c</fullName>
    <label>Etapa Full Self Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>