force-app/main/default/objects/Lead/fields/FarolEstudo__c.field-meta.xml
<CustomField>
    <fullName>FarolEstudo__c</fullName>
    <formula>CASE(Status_Estudo__c,
&quot;Novo&quot;,IMAGE(&quot;/resource/1650925141000/FAmarelo&quot;, &apos;&apos;,25,25 ),
&quot;Viavel&quot;,IMAGE(&quot;/resource/1650925141000/FVerde?&quot;, &apos;&apos;,25,25 ),
&quot;Inviavel&quot;,IMAGE(&quot;/resource/1650925142000/FVermelho?&quot;, &apos;&apos;,25,25 ),
IMAGE(&quot;/resource/1650925141000/FCinza?&quot;, &apos;&apos;,26,26 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Farol Estudo</label>
    <type>Text</type>
</CustomField>