force-app/main/default/objects/Lead/fields/Link_Download__c.field-meta.xml
<CustomField>
    <fullName>Link_Download__c</fullName>
    <label>Link Download</label>
    <type>Url</type>
</CustomField>