force-app/main/default/objects/Lead/fields/LOCALE__c.field-meta.xml
<CustomField>
    <fullName>LOCALE__c</fullName>
    <externalId>true</externalId>
    <label>LOCALE</label>
    <length>3</length>
    <type>Text</type>
</CustomField>