force-app/main/default/objects/Lead/fields/Mensagem_de_Erro_Site__c.field-meta.xml
<CustomField>
    <fullName>Mensagem_de_Erro_Site__c</fullName>
    <label>Mensagem de Erro Site</label>
    <type>TextArea</type>
</CustomField>