force-app/main/default/objects/Lead/fields/MGMT__c.field-meta.xml
<CustomField>
    <fullName>MGMT__c</fullName>
    <label>MGM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>