force-app/main/default/objects/Lead/fields/Parcerias__c.field-meta.xml
<CustomField>
    <fullName>Parcerias__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parcerias</label>
    <type>Checkbox</type>
</CustomField>