force-app/main/default/objects/Lead/fields/PFPJ__c.field-meta.xml
<CustomField>
    <fullName>PFPJ__c</fullName>
    <label>Natureza Jurídica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PF</fullName>
            </value>
            <value>
                <fullName>PJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>