force-app/main/default/objects/Lead/fields/Recordtype_Name__c.field-meta.xml
<CustomField>
    <fullName>Recordtype_Name__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recordtype Name</label>
    <type>Text</type>
</CustomField>