force-app/main/default/objects/Lead/fields/ReducaoCusto3anos__c.field-meta.xml
<CustomField>
    <fullName>ReducaoCusto3anos__c</fullName>
    <label>Redução Custo 3 Anos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>