force-app/main/default/objects/Lead/fields/ReducaoCustoSemFidelidade__c.field-meta.xml
<CustomField>
    <fullName>ReducaoCustoSemFidelidade__c</fullName>
    <label>Redução Custo Sem Fidelidade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>