force-app/main/default/objects/Lead/fields/Regiao__c.field-meta.xml
<CustomField>
    <fullName>Regiao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Região</label>
    <referenceTo>Regiao__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>