force-app/main/default/objects/Lead/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coleta de Fatura</fullName>
                <default>true</default>
                <label>Coleta de Fatura</label>
            </value>
            <value>
                <fullName>Simulação</fullName>
            </value>
            <value>
                <fullName>Perdido</fullName>
            </value>
            <value>
                <fullName>Ganho</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>