force-app/main/default/objects/Lead/fields/Status_Estudo__c.field-meta.xml
<CustomField>
    <fullName>Status_Estudo__c</fullName>
    <label>Status Estudo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novo</fullName>
            </value>
            <value>
                <fullName>Viavel</fullName>
            </value>
            <value>
                <fullName>Inviavel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>