force-app/main/default/objects/Lead/fields/SubFonte__c.field-meta.xml
<CustomField>
    <fullName>SubFonte__c</fullName>
    <label>SubFonte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>