force-app/main/default/objects/Lead/fields/Submotivo__c.field-meta.xml
<CustomField>
    <fullName>Submotivo__c</fullName>
    <label>Submotivo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DisqualifiedLead__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(1) Fora do ICP - 100% fotovoltaica ou quer colocar 100%</fullName>
            </value>
            <value>
                <fullName>(1) Fora do ICP - Hospitais/Associação sem fins lucrativos (ONGs), Igrejas e Órgãos Públicos;</fullName>
            </value>
            <value>
                <fullName>(1) Fora do ICP - Sem viabilidade técnica (consumo muito baixo em MWh);</fullName>
            </value>
            <value>
                <fullName>(1) Fora do ICP - Vai abrir empresa já no Mercado Livre e precisa de ajuste técnico no projeto;</fullName>
            </value>
            <value>
                <fullName>(1) Fora do ICP - Energia injetada fora da cerca;</fullName>
            </value>
            <value>
                <fullName>(1) Fora do ICP - Classe de tensão abaixo de 11.400v (não é optante B);</fullName>
            </value>
            <value>
                <fullName>(1) Fora do ICP - Inviabilidade técnica para conlcuir estudo;</fullName>
            </value>
            <value>
                <fullName>(1) Fora do ICP - % Fotovoltaica - Tem % percentual fotovoltaica e não quer fazer ajuste técnico;</fullName>
            </value>
            <value>
                <fullName>(1) Fora do ICP - % Fotovoltaica - Tem % percentual fotovoltaica e não quer perder crédito excedente;</fullName>
            </value>
            <value>
                <fullName>(2) Baixa Tensão - LUZ atende;</fullName>
            </value>
            <value>
                <fullName>(2) Baixa Tensão - LUZ NÃO atende;</fullName>
            </value>
            <value>
                <fullName>(2) Média/Alta Tensão - B Optante e não quis migrar para grupo A;</fullName>
            </value>
            <value>
                <fullName>(3) Contato futuro - Decisor - Futuro próximo (menor que 3 meses);</fullName>
            </value>
            <value>
                <fullName>(3) Contato futuro - Não Decisor - Futuro próximo (menor que 3 meses);</fullName>
            </value>
            <value>
                <fullName>(3) Contato futuro - Decisor - quer implementar no próximo ciclo (mais de 03 meses);</fullName>
            </value>
            <value>
                <fullName>(3) Contato futuro - Não Decisor - quer implementar no próximo ciclo (mais de 03 meses);</fullName>
            </value>
            <value>
                <fullName>(7) Lead duplicado - Redundância Positiva - Está ativo no funil de vendas (Oportunidade);</fullName>
            </value>
            <value>
                <fullName>(7) Lead duplicado - Redundância Positiva - Está ativo no funil Pré-Vendas (Lead);</fullName>
            </value>
            <value>
                <fullName>(8) Score - Avaliamos o balanço e não foi autorizado;</fullName>
            </value>
            <value>
                <fullName>(8) Score - (não aceitou mandar balanço);</fullName>
            </value>
            <value>
                <fullName>(8) Score - Default (avaliamos o balanço e não foi aprovado);</fullName>
            </value>
            <value>
                <fullName>(8) Score - Default (não aceitou mandar o balanço);</fullName>
            </value>
            <value>
                <fullName>(9) Sem interesse - Não enviou 12 últimas faturas;</fullName>
            </value>
            <value>
                <fullName>(9) Sem interesse - Contato não é decisor;</fullName>
            </value>
            <value>
                <fullName>(9) Sem interesse - Não viu valor na proposta da Luz;</fullName>
            </value>
            <value>
                <fullName>(9) Sem interesse - Parou de responder após troca de mensagens;</fullName>
            </value>
            <value>
                <fullName>(9) Sem interesse - Já tinha falando com a Luz antes e decidiram não seguir;</fullName>
            </value>
            <value>
                <fullName>(9) Sem interesse - Decisor;</fullName>
            </value>
            <value>
                <fullName>(9) Sem interesse -  Não - Decisor;</fullName>
            </value>
            <value>
                <fullName>(10) Sem resposta (após 09 FUP&apos;s) - Contato não é decisor - Não consegui avançar contato até o decisor.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>