force-app/main/default/objects/Lead/fields/Tipo_de_perda__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_perda__c</fullName>
    <label>Tipo de perda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>perdido c/ atuação</fullName>
            </value>
            <value>
                <fullName>perdido s/atuação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>