force-app/main/default/objects/Lead/recordTypes/Consultoria_Thymos.recordType-meta.xml
<RecordType>
    <fullName>Consultoria_Thymos</fullName>
    <active>true</active>
    <businessProcess>Consultoria Thymos</businessProcess>
    <label>Consultoria Thymos</label>
</RecordType>