force-app/main/default/objects/Lead/recordTypes/Delta_Atacadista.recordType-meta.xml
<RecordType>
    <fullName>Delta_Atacadista</fullName>
    <active>true</active>
    <businessProcess>Delta Atacadista</businessProcess>
    <description>Delta Atacadista</description>
    <label>Delta Atacadista</label>
</RecordType>