force-app/main/default/objects/Lead/recordTypes/LeadPF.recordType-meta.xml
<RecordType>
    <fullName>LeadPF</fullName>
    <active>true</active>
    <businessProcess>LUZ - PF</businessProcess>
    <description>Lead Pessoa Física</description>
    <label>LUZ PF</label>
</RecordType>