force-app/main/default/objects/Lead/recordTypes/LeadPJ.recordType-meta.xml
<RecordType>
    <fullName>LeadPJ</fullName>
    <active>true</active>
    <businessProcess>LUZ - PJ</businessProcess>
    <description>Lead Pessoa Jurídica</description>
    <label>LUZ PJ</label>
</RecordType>