force-app/main/default/objects/Lead/recordTypes/PFDelta.recordType-meta.xml
<RecordType>
    <fullName>PFDelta</fullName>
    <active>true</active>
    <businessProcess>Delta Parceiros</businessProcess>
    <description>Pessoa Fisica Delta</description>
    <label>Delta Parceiros - ACL</label>
</RecordType>