force-app/main/default/objects/Lead/recordTypes/PJDelta.recordType-meta.xml
<RecordType>
    <fullName>PJDelta</fullName>
    <active>true</active>
    <businessProcess>Delta Inside Sales</businessProcess>
    <description>Pessoa Juridica Delta</description>
    <label>Delta Inside Sales</label>
</RecordType>