force-app/main/default/objects/Lead/recordTypes/PPDelta.recordType-meta.xml
<RecordType>
    <fullName>PPDelta</fullName>
    <active>true</active>
    <businessProcess>Prospecção Própria</businessProcess>
    <label>Outros Sté</label>
</RecordType>