force-app/main/default/objects/Lead/recordTypes/ThymosPJ.recordType-meta.xml
<RecordType>
    <fullName>ThymosPJ</fullName>
    <active>true</active>
    <businessProcess>Thymos</businessProcess>
    <description>Pessoa Jurídica Thymos</description>
    <label>Thymos</label>
</RecordType>