force-app/main/default/objects/Lead/recordTypes/Wisebyte.recordType-meta.xml
<RecordType>
    <fullName>Wisebyte</fullName>
    <active>true</active>
    <businessProcess>Thymos</businessProcess>
    <label>Wisebyte</label>
</RecordType>