force-app/main/default/objects/Lead/validationRules/Valida_Perdido.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Perdido</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &apos;Perdido&apos;) &amp;&amp;
 ISPICKVAL(DisqualifiedLead__c, &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>DisqualifiedLead__c</errorDisplayField>
    <errorMessage>Por favor, preencher o Motivo da Desqualificação.</errorMessage>
</ValidationRule>