force-app/main/default/objects/Lead/validationRules/valida_stage_ganho_PF.validationRule-meta.xml
<ValidationRule>
    <fullName>valida_stage_ganho_PF</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(ISPICKVAL(Status, &quot;Ganho&quot;),
							 RecordType.Id = &apos;012HY0000004IC2YAM&apos;,
				OR(Email = null,
							Phone = null,  
       ISBLANK(TEXT(PFPJ__c)),
							 CNPJ__c = null,
							 ISBLANK(TEXT(MaritalStatus__c)),
							 ISBLANK(TEXT(Gender__c)),
							 Occupation__c = null,
							 BirthDate__c = null,
							 ISBLANK(TEXT(Tipo_de_produto__c)),
							 Address__c = null,
							City__c = null,
							CEP__c = null,
						 AdressNumber__c = null,
							District__c = null,
							ISBLANK(TEXT(UF__c))
				)
)
		)</errorConditionFormula>
    <errorMessage>Favor preencher os campos: Telefone, Email, Natureza Juridica, CNPJ/CPF, Estado Civil, Sexo, Profissão, Data de Nascimento, Produto, Empresa do Grupo, Logradouro, Cidade, CEP, Número,Bairro e UF</errorMessage>
</ValidationRule>