force-app/main/default/objects/Lead/listViews/Lista_Delta.listView-meta.xml
<ListView>
    <fullName>Lista_Delta</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Data_Da_Cria_o__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Valor_Conta__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.PJDelta</value>
    </filters>
    <label>Lista Delta</label>
</ListView>